--- a/slides/intro-ml.html
+++ b/slides/intro-ml.html
@@ -120,11 +120,7 @@ class: middle, center, inverse
 
 --
 
-&lt;img src="https://5.imimg.com/data5/NT/NK/MY-38742550/life-insurance-health-insurance-and-general-insurance-250x250.png" style="position: fixed; width: 20%; top: 200px; left: 100px;"&gt;
-
---
-
-&lt;img src="https://i.ytimg.com/vi/DmPLEURo-Vk/maxresdefault.jpg" style="position: fixed; width: 40%; top: 200px; left: 300px;"&gt;
+&lt;img src="https://5.imimg.com/data5/NT/NK/MY-38742550/life-insurance-health-insurance-and-general-insurance-250x250.png" style="position: fixed; width: 20%; top: 200px; left: 300px;"&gt;
 
 ---
 
@@ -137,8 +133,7 @@ Leo Breiman: ["Statistical Modeling: The Two Cultures"](https://projecteuclid.or
 &lt;img src="https://upload.wikimedia.org/wikipedia/en/4/4d/Leo_Breiman.jpg"&gt;
 
 ---
-
-# Machine Learning e Estatística
+class: center, middle
 
 &lt;img src = "img/box.png" class = "center2"&gt;
 
@@ -159,8 +154,7 @@ y \approx f(x)
 $$
 
 ---
-
-# Machine Learning e Estatística
+class: center, middle
 
  &lt;img src="img/box-data-models.png" class = "center2"&gt; 
  
@@ -172,10 +166,12 @@ $$
 &lt;img src="img/box-algorithmic-models.png" class = "center2"&gt;
 
 ---
+class: center, middle
 
 &lt;img src="https://wordstream-files-prod.s3.amazonaws.com/s3fs-public/styles/simple_image/public/images/machine-learning1.png?Q_SmWhhhAEOO_32HNjPhcxsPhreWV26o&amp;itok=yjEJbEKD" style="display: block; margin-left: auto; margin-right: auto;"&gt;&lt;/img&gt;
 
 ---
+class: center, middle
 
 &lt;img src="img/ml_101.png" class = "center2"&gt;
 
@@ -196,12 +192,12 @@ $$
 &lt;img src="https://media.giphy.com/media/sqefuSs2oD8sg/giphy.gif" class="smart_cat"&gt;
 
 ---
-
-&lt;br&gt;
+class: center, middle
 
 &lt;img src="img/aviao.png" class="center2"&gt;
 
 ---
+class: center, middle
 
 &lt;img src="img/google.png" class="google"&gt;
 
