ultimo tapa nos slides de intro

--- a/slides/intro-ml.html
+++ b/slides/intro-ml.html
@@ -28,13 +28,15 @@ class: center, middle, inverse, title-slide
 
 # Programa do curso
 
--  Introdução ao Machine Learning
+- Introdução ao Machine Learning
 
-- Regressão linear, regularização
-
--  Estratégias gerais: separação da base de dados, reamostragem, tuning de modelos, métricas de performance
+- Regressão linear
 
 - Regressão logística, regressão vs classificação
+
+- Estratégias gerais: separação da base de dados, reamostragem, tuning de modelos, métricas de performance
+
+- Regularização
 
 - Modelos de árvores
 
